Fixes header overlap in admin view

--- a/src/scss/core/_header.scss
+++ b/src/scss/core/_header.scss
@@ -10,3 +10,6 @@ header {
   }
   
 }
+
+/// Style adjustments for the back-end header container.
+.s-lib-cmd-bar + #s-lg-guide-header { margin-top: px($command-bar-height) + 25px; }
